# topefind-public

./: .coveragerc  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: run_pytests.yml
examples/: hypertune.py  hypertune_forest.py  predict_paratopes_from_sequences.py
resources/: aas_features.csv  aas_features_readme.txt  paragraph_test.parquet  paragraph_train.parquet  paragraph_val.parquet
topefind/: benchmarkers.py  data_hub.py  embedders.py  predictors.py  utils.py
topefind/dashboard/: 1bvk.bcif  1fe8.bcif  1fj1.bcif  1fpt.bcif  1hh6.bcif  1kcs.bcif  1nmc.bcif  1pkq.bcif  1qkz.bcif  1tet.bcif  2h1p.bcif  2qsc.bcif  2r29.bcif  3fn0.bcif  3hmx.bcif  3hr5.bcif  3i50.bcif  3ifp.bcif  3o6l.bcif  3s37.bcif  3sge.bcif  4gms.bcif  4hha.bcif  4i3r.bcif  4i77.bcif  4jb9.bcif  4jkp.bcif  4m8q.bcif  4n0y.bcif  4nrx.bcif  4om0.bcif  4onf.bcif  4qyo.bcif  4xxd.bcif  4yk4.bcif  4yue.bcif  5bk1.bcif  5bk2.bcif  5c0n.bcif  5csz.bcif  (+144 more)
topefind/exploration/: __init__.py  anti_esm.py  train_size.py  training_size.csv
topefind/tests/: test_data_hub.py  test_embedders.py  test_predictors.py  test_utils.py
topefind/tests/mock_data/: sabdab_mock.tsv
